# week-6

./: Dockerfile.fastapi  Dockerfile.mlflow  Dockerfile.triton  README.md  basic_auth.ini  docker-compose.yaml  model_to_onnx.py  prepare_data.py  pyproject.toml  requirements_triton.txt  train.py
model_repository/bot_classifier/: config.pbtxt
model_repository/logreg/: config.pbtxt
model_repository/logreg/1/: model.onnx
model_repository/logreg_postprocess/: config.pbtxt
model_repository/logreg_postprocess/1/: model.py
model_repository/text_preprocess/: config.pbtxt
model_repository/text_preprocess/1/: __init__.py  model.py  transform.pkl
tests/: conftest.py  inference_requests.txt  inference_requests_triton.txt  inference_responses.txt  inference_responses_triton.txt  sample_dialog.json  test_champion_model.py  test_main.py
youarebot/api/: main.py
youarebot/data/: schemas.py
